# basic-trebuchet-sim

./: README.md  pyproject.toml
figures/: trebuchetexcalidraw.excalidraw
src/: .symbolic_computation_cache.pickle  double_pendulum.py  single_pendulum.py  trebuchet.py
